434/4341/a-service/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: a-anotherclass-434
  name: portal-4341
  labels:
    part-of: k8s-anotherclass
    component: frontend-server
    name: portal
    instance: portal-4341
    version: 3.0.0
    managed-by: kubectl
spec:
  selector:
    matchLabels:
      part-of: k8s-anotherclass
      component: frontend-server
      name: portal
      instance: portal-4341
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        part-of: k8s-anotherclass
        component: frontend-server
        name: portal
        instance: portal-4341
        version: 3.0.0
    spec:
      containers:
        - name: portal-4341
          # 1pro는 본인의 dockerhub username으로 변경해 주세요.
          image: 1pro/api-tester:3.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: "/startup"
              port: 8080
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: secret-datasource
              mountPath: /usr/src/myapp/datasource
      volumes:
        - name: secret-datasource
          secret:
            secretName: api-tester-4341-postgresql
